--- a/08_Streamlit/requirements.txt
+++ b/08_Streamlit/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
+streamlit==1.36.0
 pandas==2.2.2
-numpy
-seaborn
-matplotlib
-plotly
-streamlit_folium
-pillow
+numpy==2.0.0
+seaborn==0.13.2
+matplotlib==3.9.1
+plotly==5.22.0
+streamlit_folium==0.21.0
+pillow==10.4.0
